coffee buttons center

--- a/src/app/coffee-chat/coffee-chat.component.html
+++ b/src/app/coffee-chat/coffee-chat.component.html
@@ -25,7 +25,7 @@
 
 <body>
     <div class="coffee-chat" id="content">
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="col-3"></div>
                 <!--Button 1-->
                 <div class="col-6 bkrd">
@@ -37,7 +37,7 @@
                 </div>
             <div class="col-3"></div>
         </div>
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="col-3"></div>
             <!--Button 2-->
             <div class="col-6 bkrd">
