--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -133,7 +133,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <button [disabled]="loading" class="modal-button" data-dismiss="modal" aria-label="Close">
+                            <button [disabled]="loading" class="modal-button" >
                                 <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                                 Update Account
                             </button>
