Added new lines to published journals

--- a/src/app/journal-published/journal-published.component.html
+++ b/src/app/journal-published/journal-published.component.html
@@ -57,7 +57,7 @@
                 
                 </div>
                 <div class="modal-body">
-                    <p> {{currentEntry.text}} </p>
+                    <p style="white-space: pre-line;"> {{currentEntry.text}} </p>
                 <br />
                 <button type="button" class="modal-button" data-dismiss="modal" aria-label="Close">Close</button>
                 </div>
