--- a/src/app/mood-chosen/mood-chosen.component.html
+++ b/src/app/mood-chosen/mood-chosen.component.html
@@ -31,11 +31,11 @@
                 </div>
             <div class="resource-container">
                 <div class="resource-item">
-                        <button id="read" value="anxious" name="button"(click) = "onSubmitRead()" routerLink="/mood-chosen"></button> <hr>Read </div>
+                        <button id="read"  name="button"(click) = "onSubmitRead()" routerLink="/mood-chosen"></button> <hr>Read </div>
                 <div class="resource-item">
-                    <button id="watch" value="excited" name="button" (click) = "onSubmitWatch()" routerLink="/mood-chosen"></button><hr> Watch </div>
+                    <button id="watch"  name="button" (click) = "onSubmitWatch()" routerLink="/mood-chosen"></button><hr> Watch </div>
                 <div class="resource-item">
-                    <button id="do" value="confused" name="button" (click) = "onSubmitDo()" routerLink="/mood-chosen"></button><hr>Do </div>
+                    <button id="do" name="button" (click) = "onSubmitDo()" routerLink="/mood-chosen"></button><hr>Do </div>
                 </div>
             </div>
          </div>
