--- a/src/app/mood-tracker-navbar/mood-tracker-navbar.component.css
+++ b/src/app/mood-tracker-navbar/mood-tracker-navbar.component.css
@@ -1,3 +1,59 @@
+
+:host{
+    --color-first:#f9f0ef;
+    --color-second: #eed4cf;
+}
+
+html ::ng-deep [data-theme="blue"] {
+    --color-first: #D8E4E7;
+    --color-second: #AFC5CA;
+    --color-navbar: #99b6dc;
+}
+
+html ::ng-deep [data-theme="pink"] {
+        --color-first: #f9f0ef;
+        --color-second: #eed4cf;
+        --color-navbar: #E2b8af;
+}
+
+html ::ng-deep [data-theme="green"] {
+    --color-first: #e7ffe6;
+    --color-second: #c8e2c7;
+    --color-navbar: #B4ceb3;
+}
+
+#navbarMood{
+    background: var(--color-navbar);
+}
+
+::ng-deep .first{
+    background: var(--color-first);
+    color:black;
+    font-size: 28px;
+    margin:auto;
+    width: 700px;
+    height: 350px;
+    overflow: hidden;
+    border-radius:3px;
+    border:1px solid rgb(117, 116, 116);
+    
+}
+
+
+::ng-deep .second{
+    border-radius:3px;
+    border: 1px solid rgb(117, 116, 116);
+    width: 75%;
+    height: 25%;
+    margin: auto;
+    margin-top: 10px;
+    background: var(--color-second);
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+
 .dropdown-menu{
     background-color: #E2b8af  !important;
     width: fit-content !important;
@@ -12,5 +68,7 @@
 .text-grey{
     color: rgb(97, 96, 96) !important;
 }
+
+
 
 
