delete button fixed

--- a/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
+++ b/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
@@ -59,7 +59,7 @@
                                     href="http://www.google.com/calendar/event?action=TEMPLATE&text={{meeting.title}}&dates={{meeting.year}}{{meeting.month}}{{meeting.day}}T{{sTime}}00/{{meeting.year}}{{meeting.month}}{{meeting.day}}T{{eTime}}00&trp=false&sprop=&sprop=name:" target="_blank" rel="nofollow">Add to Google Calendar</a>
                                 </div>
                                 <div class="row justify-content-center">
-                                    <button class="button" (click)="deleteMeeting(meeting)" data-toggle="modal" data-target="#delete">Delete Meeting</button>
+                                    <button class="delete-button" (click)="deleteMeeting(meeting)" data-toggle="modal" data-target="#delete">Delete Meeting</button>
                                 </div>
                             </div>
                         </div>
