zoom functionality additions

--- a/src/app/coffee-chat-profiles/coffee-chat-profiles.component.html
+++ b/src/app/coffee-chat-profiles/coffee-chat-profiles.component.html
@@ -60,7 +60,7 @@
 
 <!--Zoom Embed-->
 <div class="iframe-container" style="overflow: hidden; padding-top: 56.25%; position: relative;">
-    <iframe allow="microphone; camera" style="border: 0; height: 90%; left: 0; position: absolute; top: 0; width: 100%;" [src]="zoomUrl | safe" frameborder="0"></iframe>
+    <iframe scrolling="no" allow="microphone; camera" style="border: 0; height: 90%; left: 0; position: absolute; max-height: fit-content; top:0; width: 100%;" [src]="zoomUrl | safe" frameborder="0"></iframe>
 </div>
 
 
