--- a/src/app/coffee-chat-profiles/coffee-chat-profiles.component.html
+++ b/src/app/coffee-chat-profiles/coffee-chat-profiles.component.html
@@ -17,7 +17,7 @@
       <br>
       <br>
 <!--Have each participants profile with pic/avatar, Name, profession, bio-->
-<div class="card-container">
+<div class="card-container" style="overflow-y: hidden; overflow-x: hidden;">
     <div class="card" *ngFor="let participant of currentMeeting.participants" [ngValue]="participant">
         <header class="article-header">
             <div>
