--- a/src/app/coffee-chat/coffee-chat.component.html
+++ b/src/app/coffee-chat/coffee-chat.component.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="coffeechat">
 
 <head>
     <meta charset="utf-8">
@@ -28,7 +28,7 @@
         <div class="row justify-content-center">
             <div class="col-3"></div>
                 <!--Button 1-->
-                <div class="col-6 bkrd">
+                <div class="col-6 bkrd" id="ccButton">
                     <button class="button" routerLink="/coffee-chat-select-friends">
                         Select Friend Group 
                         <div class="button__horizontal"></div>
@@ -40,7 +40,7 @@
         <div class="row justify-content-center">
             <div class="col-3"></div>
             <!--Button 2-->
-            <div class="col-6 bkrd">
+            <div class="col-6 bkrd" id="ccButton">
                 <button class="button" routerLink="/coffee-chat-random-friends">
                     Randomly Generate Friends
                     <div class="button__horizontal"></div>
