--- a/src/app/coffee-chat-navbar/coffee-chat-navbar.component.html
+++ b/src/app/coffee-chat-navbar/coffee-chat-navbar.component.html
@@ -1,6 +1,6 @@
 <!-- Page Content Holder -->
 
-    <nav class="navbar navbar-expand-lg" style="background-color: #e4955e;">
+    <nav class="navbar navbar-expand-lg" id="ccNavBar">
         <div class="container-fluid">
             <a class="navbar-brand fancy-font text-grey m-2" style="font-size: 40px;">Coffee Chat</a>
             <a class="reg-font text-grey" style="font-size: 30">>> {{currentPage}}</a>
@@ -21,6 +21,21 @@
                             <li class="dropdown-item text-grey" href="coffee-chat-select-friends" routerLink="/coffee-chat-select-friends">Select Friends</li>
                             <li class="dropdown-item text-grey" href="coffee-chat-random-friends" routerLink="/coffee-chat-random-friends">Randomly Generate Friends</li>
                         </ul>
+                        <li class="dropdown nav-item">
+                                <a class="nav-link dropdown-toggle reg-font text-grey hoverable" href="#new-entry-submenu" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Change Color</a>
+                                <ul class="dropdown-menu reg-font dropdown-menu-right" aria-labelledby="navbarDropdown">
+                                    <li class="dropdown-item text-grey" style="cursor: pointer;" >
+                                        <button type="button" (click)="colorPink()">Pink</button>
+                                        <button type="button" (click)="colorGreen()">Green</button>
+                                        <button type="button" (click)="colorBlue()">Blue</button>
+                                    </li>
+                                    <li class="dropdown-item text-grey" style="cursor: pointer;" >
+                                        <button type="button" (click)="colorPurple()">Purple</button>
+                                        <button type="button" (click)="colorOrange()">Orange</button>
+                                    </li>
+                                </ul>
+
                     </li>
                 </ul>
             </div>
