--- a/src/app/journal-navbar/journal-navbar.component.html
+++ b/src/app/journal-navbar/journal-navbar.component.html
@@ -1,4 +1,4 @@
-    <nav class="navbar navbar-expand-lg" style="background-color: #7ca5af;">
+    <nav class="navbar navbar-expand-lg" id="navbarJournal">
         <div class="container-fluid">
             <a class="navbar-brand fancy-font text-grey" style="font-size: 40px;">Journal</a>
             <a class="reg-font text-grey" style="font-size: 30">>> {{currentPage}}</a>
@@ -19,6 +19,21 @@
                             <li class="dropdown-item text-grey" style="cursor: pointer;" href="journal-prompt" routerLink="/journal-prompt">Respond to a Prompt</li>
                         </ul>
                     </li>
+                    <li class="dropdown nav-item">
+                            <a class="nav-link dropdown-toggle reg-font text-grey hoverable" href="#new-entry-submenu" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Change Color</a>
+                            <ul class="dropdown-menu reg-font dropdown-menu-right" aria-labelledby="navbarDropdown">
+                                <li class="dropdown-item text-grey" style="cursor: pointer;" >
+                                    <button type="button" (click)="colorPink()">Pink</button>
+                                    <button type="button" (click)="colorGreen()">Green</button>
+                                    <button type="button" (click)="colorBlue()">Blue</button>
+                                </li>
+                                <li class="dropdown-item text-grey" style="cursor: pointer;" >
+                                    <button type="button" (click)="colorPurple()">Purple</button>
+                                    <button type="button" (click)="colorOrange()">Orange</button>
+                                </li>
+                            </ul>
+                        </li>
                 </ul>
             </div>
         </div>
