--- a/src/app/mood-chosen/mood-chosen.component.html
+++ b/src/app/mood-chosen/mood-chosen.component.html
@@ -1,4 +1,4 @@
-
+<html id="html">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,8 +25,8 @@
 
 
     <div class="background-mood" id="content">
-            <div id="first">
-                <div id="second">
+            <div class="first">
+                <div class="second">
                     <div id="title"> You're feeling: {{currentMood.mood}} </div>
                 </div>
             <div class="resource-container">
@@ -40,5 +40,5 @@
             </div>
          </div>
         </body>
-      
+    </html>
 
