--- a/src/app/mood-tracker-navbar/mood-tracker-navbar.component.html
+++ b/src/app/mood-tracker-navbar/mood-tracker-navbar.component.html
@@ -9,7 +9,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link reg-font text-grey hoverable" href="mood-tracker-weekly-charts">Weekly Graph</a>
+                                <a class="nav-link reg-font text-grey hoverable" href="mood-tracker-weekly-charts">Monthly Graph</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link reg-font text-grey hoverable" href="mood-tracker">Update Mood</a>
@@ -19,9 +19,13 @@
                                     Change Color</a>
                                 <ul class="dropdown-menu reg-font dropdown-menu-right" aria-labelledby="navbarDropdown">
                                     <li class="dropdown-item text-grey" style="cursor: pointer;" >
-                                    <button type="button" (click)="colorPink()">Pink</button>
-                                    <button type="button" (click)="colorGreen()">Green</button>
-                                    <button type="button" (click)="colorBlue()">Blue</button>
+                                        <button type="button" (click)="colorPink()">Pink</button>
+                                        <button type="button" (click)="colorGreen()">Green</button>
+                                        <button type="button" (click)="colorBlue()">Blue</button>
+                                    </li>
+                                    <li class="dropdown-item text-grey" style="cursor: pointer;" >
+                                        <button type="button" (click)="colorPurple()">Purple</button>
+                                        <button type="button" (click)="colorOrange()">Orange</button>
                                     </li>
                                 </ul>
                             </li>
