--- a/src/app/mood-tracker/mood-tracker.component.html
+++ b/src/app/mood-tracker/mood-tracker.component.html
@@ -25,23 +25,23 @@
     </div>
 
 <div class="background-mood" id="content">
-    <div id="first" class= "first" >
-        <div id="second" class="second">
+    <div class="first">
+        <div class="second">
             <div id="title">How are you feeling today?</div>
          </div>
         
     <div class="mood-container">
-        <form [formGroup]="anxietyForm" (ngSubmit)="onSubmitAnxiety()">
-        <div class="form-group">
-        <div class="mood-item">
-            <button class = "moodButton" id="anxious" value="false" name="button"></button><hr>Anxious </div>
-            </div>
-        </form>
         <form [formGroup]="excitedForm" (ngSubmit)="onSubmitExcited()">
             <div class="form-group"> 
-            <div class="mood-item">
-            <button id="excited" class = "moodButton" value="excited" name="button"></button> <hr>Excited </div>
-        </div>
+                <div class="mood-item">
+                    <button id="excited" class = "moodButton" value="excited" name="button"></button> <hr>Excited </div>
+            </div>
+        </form>
+        <form [formGroup]="contentForm" (ngSubmit)="onSubmitContent()">
+            <div class="form-group">
+                <div class="mood-item">
+                    <button id="content1" class="moodButton" value="content" name="button"></button><hr>Content </div>
+                </div>
         </form>
         <form [formGroup]="tiredForm" (ngSubmit)="onSubmitTired()">
                 <div class="form-group">
@@ -49,18 +49,19 @@
                     <button id="tired" class = "moodButton" value="tired" name="button"></button><hr>Tired </div>
                 </div>
         </form>
-        <form [formGroup]="contentForm" (ngSubmit)="onSubmitContent()">
+        <form [formGroup]="anxietyForm" (ngSubmit)="onSubmitAnxiety()">
                 <div class="form-group">
                 <div class="mood-item">
-                    <button id="content1" class="moodButton" value="content" name="button"></button><hr>Content </div>
+                    <button class = "moodButton" id="anxious" value="false" name="button"></button><hr>Anxious </div>
+                    </div>
+                </form>
+        <form [formGroup]="sadForm" (ngSubmit)="onSubmitSad()">
+                <div class="form-group">
+                <div class="mood-item">
+                    <button id="sad" value="sad" class = "moodButton" name="button"></button><hr> Sad </div>
                 </div>
         </form>
-        <form [formGroup]="sadForm" (ngSubmit)="onSubmitSad()">
-        <div class="form-group">
-        <div class="mood-item">
-            <button id="sad" value="sad" class = "moodButton" name="button"></button><hr> Sad </div>
-        </div>
-        </form>
+        
         </div>
     </div>
  </div>
