--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="profile">
 
 <head>
     <meta charset="utf-8">
@@ -59,7 +59,7 @@
 
                     </div>
                     <div class="row justify-content-center">
-                        <button class="buttons" data-toggle="modal" data-target="#edit-profile">
+                        <button class="buttons" data-toggle="modal" data-target="#edit-profile" id="userButton">
                             Edit Profile
                         </button>
                     </div>
