--- a/src/app/user-profile-navbar/user-profile-navbar.component.html
+++ b/src/app/user-profile-navbar/user-profile-navbar.component.html
@@ -1,5 +1,5 @@
 
-            <nav class="navbar navbar-expand-lg" style="background-color: #a1c2a8;">
+            <nav class="navbar navbar-expand-lg" id="navbarProfile">
                 <div class="container-fluid">
                     <a class="navbar-brand text-grey fancy-font" style="font-size: 40px;">User Profile</a>
                     <a class="reg-font text-grey" style="font-size: 30">>> {{currentPage}}</a>
@@ -15,6 +15,21 @@
                             <li class="nav-item">
                                 <a class="nav-link reg-font text-grey hoverable" href="user-profile-contacts">Contacts</a>
                             </li>
+                            <li class="dropdown nav-item">
+                                    <a class="nav-link dropdown-toggle reg-font text-grey hoverable" href="#new-entry-submenu" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Change Color</a>
+                                    <ul class="dropdown-menu reg-font dropdown-menu-right" aria-labelledby="navbarDropdown">
+                                        <li class="dropdown-item text-grey" style="cursor: pointer;" >
+                                            <button type="button" (click)="colorPink()">Pink</button>
+                                            <button type="button" (click)="colorGreen()">Green</button>
+                                            <button type="button" (click)="colorBlue()">Blue</button>
+                                        </li>
+                                        <li class="dropdown-item text-grey" style="cursor: pointer;" >
+                                            <button type="button" (click)="colorPurple()">Purple</button>
+                                            <button type="button" (click)="colorOrange()">Orange</button>
+                                        </li>
+                                    </ul>
+                                </li>
                         </ul>
                     </div>
                 </div>
