--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,12 +21,15 @@
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
             <img src="assets/images/logo.jpg" alt="" width="100" height="80"><br><br>
            <div class="reg-font">Meaningful Minutes</div>
+           <p><alert></alert></p>
             <hr>
             <div class="form-group">
                 <input type="text" placeholder="username" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
                     <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
                     <div *ngIf="f.username.errors.required">Username is required</div>
                     </div>
+                    
+
             </div>
             <div class="form-group">
                 <input type="password" placeholder="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
