slight fixes for image preloading

--- a/src/app/coffee-chat-random-friends/coffee-chat-random-friends.component.html
+++ b/src/app/coffee-chat-random-friends/coffee-chat-random-friends.component.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="form-wrapper justify-content-center">
                     <button [disabled]="loading" class="button">
-                        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1" routerLink="/coffee-chat-pending-meetings"></span>
+                        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                         Create Meeting
                     </button>
                 </div>
