--- a/src/app/user-profile-navbar/user-profile-navbar.component.html
+++ b/src/app/user-profile-navbar/user-profile-navbar.component.html
@@ -16,19 +16,16 @@
                                 <a class="nav-link reg-font text-grey hoverable" href="user-profile-contacts">Contacts</a>
                             </li>
                             <li class="dropdown nav-item">
-                                    <a class="nav-link dropdown-toggle reg-font text-grey hoverable" href="#new-entry-submenu" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Change Color</a>
-                                    <ul class="dropdown-menu reg-font dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                        <li class="dropdown-item text-grey" style="cursor: pointer;" >
-                                            <button type="button" (click)="colorPink()">Pink</button>
-                                            <button type="button" (click)="colorGreen()">Green</button>
-                                            <button type="button" (click)="colorBlue()">Blue</button>
-                                        </li>
-                                        <li class="dropdown-item text-grey" style="cursor: pointer;" >
-                                            <button type="button" (click)="colorPurple()">Purple</button>
-                                            <button type="button" (click)="colorOrange()">Orange</button>
-                                        </li>
-                                    </ul>
+                                <a class="nav-link color-button" title="Change Color" style="background-color: var(--color-second); margin-top: 8px" href="#new-entry-submenu" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
+                                <ul class="dropdown-menu reg-font dropdown-menu-right" aria-labelledby="navbarDropdown">
+                                    <li class="dropdown-item text-grey" style="cursor: pointer;" >
+                                        <button type="button" class="color-button" style="background-color: #E2b8af" (click)="colorPink()"></button>
+                                        <button type="button" class="color-button" style="background-color: #B4ceb3" (click)="colorGreen()"></button>
+                                        <button type="button" class="color-button" style="background-color: #7ca5af" (click)="colorBlue()"></button>
+                                        <button type="button" class="color-button" style="background-color: #B79EB1" (click)="colorPurple()"></button>
+                                        <button type="button" class="color-button" style="background-color: #F4C389" (click)="colorOrange()"></button>
+                                    </li>
+                                </ul>
                                 </li>
                         </ul>
                     </div>
