--- a/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
+++ b/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
@@ -52,11 +52,11 @@
                                     <a class="p-1 reg-font"> {{participant.status}}</a>
                                 </div>
                                 <div class="row justify-content-center">
-                                    <button class="button" (click)="sendMeeting(meeting)" routerLink="/coffee-chat-profiles">View Participant Profiles</button>
+                                    <button class="button" (click)="sendMeeting(meeting)" routerLink="/coffee-chat-profiles" id="createMeeting">View Participant Profiles</button>
                                     <div class="divider"></div>
 
                                     <a class="button" (click)="updateTimeVariables(meeting); getParticipantEmails(meeting)"
-                                    href="http://www.google.com/calendar/event?action=TEMPLATE&text={{meeting.title}}&dates={{meeting.year}}{{meeting.month}}{{meeting.day}}T{{sTime}}00/{{meeting.year}}{{meeting.month}}{{meeting.day}}T{{eTime}}00&trp=false&sprop=&sprop=name:" target="_blank" rel="nofollow">Add to Google Calendar</a>
+                                    href="http://www.google.com/calendar/event?action=TEMPLATE&text={{meeting.title}}&dates={{meeting.year}}{{meeting.month}}{{meeting.day}}T{{sTime}}00/{{meeting.year}}{{meeting.month}}{{meeting.day}}T{{eTime}}00&trp=false&sprop=&sprop=name:" target="_blank" rel="nofollow" id="createMeeting">Add to Google Calendar</a>
                                 </div>
                                 <div class="row justify-content-center">
                                     <button class="delete-button" (click)="deleteMeeting(meeting)" data-toggle="modal" data-target="#delete">Delete Meeting</button>
