--- a/src/app/coffee-chat/coffee-chat.component.html
+++ b/src/app/coffee-chat/coffee-chat.component.html
@@ -28,8 +28,8 @@
         <div class="row justify-content-center">
             <div class="col-3"></div>
                 <!--Button 1-->
-                <div class="col-6 bkrd" id="ccButton">
-                    <button class="button" routerLink="/coffee-chat-select-friends">
+                <div class="col-6 bkrd">
+                    <button class="button" id="ccButton" routerLink="/coffee-chat-select-friends">
                         Select Friend Group 
                         <div class="button__horizontal"></div>
                         <div class="button__vertical"></div>
@@ -40,8 +40,8 @@
         <div class="row justify-content-center">
             <div class="col-3"></div>
             <!--Button 2-->
-            <div class="col-6 bkrd" id="ccButton">
-                <button class="button" routerLink="/coffee-chat-random-friends">
+            <div class="col-6 bkrd">
+                <button class="button" id="ccButton" routerLink="/coffee-chat-random-friends">
                     Randomly Generate Friends
                     <div class="button__horizontal"></div>
                     <div class="button__vertical"></div>
