--- a/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
+++ b/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
@@ -59,7 +59,7 @@
                                     href="http://www.google.com/calendar/event?action=TEMPLATE&text={{meeting.title}}&dates={{meeting.year}}{{meeting.month}}{{meeting.day}}T{{sTime}}00/{{meeting.year}}{{meeting.month}}{{meeting.day}}T{{eTime}}00&trp=false&sprop=&sprop=name:" target="_blank" rel="nofollow" id="createMeeting">Add to Google Calendar</a>
                                 </div>
                                 <div class="row justify-content-center">
-                                    <button class="delete-button" (click)="deleteMeeting(meeting)" data-toggle="modal" data-target="#delete">Delete Meeting</button>
+                                    <button class="delete-button" data-toggle="modal" data-target="#delete">Delete Meeting</button>
                                 </div>
                             </div>
                         </div>
@@ -123,19 +123,16 @@
                 <div class="modal-sandbox"></div>
                 <div class="modal-box">
                     <div class="modal-header">
-                        <h1 class="reg-font">Delete Meeting</h1>
-                    <div class="close-modal justify-content-end" style="margin-top: 1em">&#10006;</div> 
-                    
+                        <h1 class="reg-font">Delete Meeting</h1>                    
                     </div>
                     <div class="modal-body">
-                        <p>Are you sure you want to delete this meeting? </p>
-                    <br />         
+                        <p>Are you sure you want to delete this meeting?</p>
+                    <br />
                     <button type="button" class="modal-button" (click)="deleteMeeting(currentMeeting)" data-dismiss="modal" aria-label="Delete">Delete</button>
-                    <button type="button" class="modal-button" data-dismiss="modal" aria-label="Close">Cancel</button> 
+                    <button type="button" class="modal-button" data-dismiss="modal" aria-label="Close">Cancel</button>                     
                     </div>
                 </div>
-                </div>
-
+            </div>
         </div>
 
 
