--- a/src/app/user-profile-contacts/user-profile-contacts.component.html
+++ b/src/app/user-profile-contacts/user-profile-contacts.component.html
@@ -50,7 +50,7 @@
                     <div class="flip-card-inner">
                         <div class="flip-card-front" id="userCard">
                           <h3>{{friend.firstName}} {{friend.lastName}}</h3>
-                          <img src="assets\images\kal-visuals-b1Hg7QI-zcc-unsplash.jpg"/>
+                          <img src="assets/images/dog.jpg">
                           <p>{{friend.role}}</p>
                         </div>
                         <div class="flip-card-back">
