--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -13,6 +13,12 @@
         <!-- Font Awesome JS -->
         <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
         <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
+        
+        <script>
+            function profilePicture1() {
+              document.getElementById("demo").style.color = "red";
+            }
+            </script>
     </head>
 <body>
     <div class="bg-image"></div>
@@ -68,7 +74,23 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="password">Password</label>
+        <label for="profilepicture">Choose a Profile Picture</label>
+        <div class="row justify-content-center">
+            <div class="col-3">
+                <input type="checkbox" id="checkbox" name="profilePicture" value="'../assets/images/creek.jpg'" class="picture-button"><img src='../assets/images/creek.jpg'>
+            </div>
+            <div class="col-3">
+                <input type="checkbox" id="checkbox" name="profilePicture" value="'../assets/images/dog.jpg'" class="picture-button"><img src='../assets/images/dog.jpg'>
+            </div>
+            <div class="col-3">
+                <input type="checkbox" id="checkbox" name="profilePicture" value="'../assets/images/road.jpg'" class="picture-button"><img src='../assets/images/road.jpg'>
+            </div>
+            <div class="col-3">
+                <input type="checkbox" id="checkbox" name="profilePicture" value="'../assets/images/trees.jpg'" class="picture-button"><img src='../assets/images/trees.jpg'>
+            </div>
+         </div>
+    </div>
+    <div class="form-group">
         <input type="password" placeholder= "Password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
         <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
             <div *ngIf="f.password.errors.required">Password is required</div>
