--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -7,6 +7,7 @@ body{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;  
   height: 125vh;
+  font-family: 'Montserrat';
 }
 
 
@@ -31,7 +32,7 @@ body{
 }
 
 .login-form input {
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
   outline: 0;
   background: #f2f2f2;
   width: 100%;
@@ -71,7 +72,7 @@ body{
   text-decoration: none;
 }
 
-img {
+.col-3 img {
   height: 6em !important;
   width: 6em !important;
   border: 2px solid grey;
@@ -91,10 +92,6 @@ img {
   outline: unset !important;
   display: inline-block !important;
   width: 25% !important;
-}
-
-img:hover{
-  box-shadow: 2px 2px 5px grey;
 }
 
 
