--- a/src/app/user-profile-dashboard/user-profile-dashboard.component.html
+++ b/src/app/user-profile-dashboard/user-profile-dashboard.component.html
@@ -80,7 +80,7 @@
                 
                 </div>
                 <div class="modal-body">
-                    <p> {{currentEntry.text}} </p>
+                    <p style="white-space: pre-line;"> {{currentEntry.text}} </p>
                 <br />
                 <button type="button" class="modal-button" data-dismiss="modal" aria-label="Close">Close</button>
                 </div>
